fix: cash balance module changes