@@ -1,6 +1,7 @@
 package com.domingueti.tradebot.modules.CashBalance.services.types;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -21,8 +22,7 @@ private CashBalanceTypeRepository cashBalanceTypeRepository;
 		
 		List<CashBalanceType> cashBalanceTypes = cashBalanceTypeRepository.findAllAndDeletedAtIsNull();
 		
-		return cashBalanceTypeRepository.findAll().stream()
-				.map(CashBalanceTypeDTO::new).toList();
+		return cashBalanceTypes.stream().map(CashBalanceTypeDTO::new).collect(Collectors.toList());
 	}
 	
 }
